@@ -6,6 +6,7 @@
 	- Fix RELAYFS Kconfig selection (kernel patch)
 	- blktrace: Don't touch the stored trace, leave magic and version
 	  for blkparse to see as well.
+	- Always store trace data in big endian format
 20050827:
 	- Various cleanups and killing unused variables
 20050826:
